--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.kalkulyator{
+  border: 2px solid black;
+  width: 310px;
+  margin-top: 120px;
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  width: 250px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  padding: 10px;
+  grid-gap: 10px;
+}
+.input{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  border: none;
+  margin: auto;
+  height: 50px;
+  font-size: 30px;
+  text-align: right;
 }
